<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="M1">M1</string>
    <string name="M2">M2</string>
    <string name="a">A</string>
    <string name="about">About</string>
    <string name="about_content">"UDPMote (fork of Dolphindroid)
Copyright © 2017, Anthony Calosa
Copyright © 2020-2021, Eric Zhang (EZForever)

For use with Custom Dolphin/Ishiiruka Emulator with UDPWii support.
Use with <a href="https://github.com/EZForever/UDPWiiHook/releases">UDPWiiHook</a> to enable support for MotionPlus emulation.

Links:
 "<a href="https://github.com/kevlahnota/dolphin/releases">Custom Dolphin 5.0-4484</a>"
 "<a href="https://github.com/kevlahnota/Ishiiruka/releases">Custom Ishiiruka 953</a>"
 "<a href="https://dolphin-emu.org/download/list/wiispeak/1/">Official Wiispeak Branch (old)</a></string>
    <string name="app_name">UDPMote</string>
    <string name="b">B</string>
    <string name="connect">Connect</string>
    <string name="custom">Custom</string>
    <string name="custom_connection">Custom Connection</string>
    <string name="dl">D+L</string>
    <string name="down">Down</string>
    <string name="dr">D+R</string>
    <string name="home">Home</string>
    <string name="left">Left</string>
    <string name="m1">mode1</string>
    <string name="m2">mode2</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="presses_to_go"> more back button presses to disconnect</string>
    <string name="rb1x">M0</string>
    <string name="rb2x">M1</string>
    <string name="rb3x">M2</string>
    <string name="rb4x">M3</string>
    <string name="rb5x">M4</string>
    <string name="rbmax">MAX</string>
    <string name="resolv_failed">Failed to resolve hostname</string>
    <string name="right">Right</string>
    <string name="server_address">Server Address</string>
    <string name="server_port">Server Port</string>
    <string name="socket_failed">Failed to open socket</string>
    <string name="tb4way">4W</string>
    <string name="tb8way">8W</string>
    <string name="title_activity_alternate">AlternateActivity</string>
    <string name="title_activity_controller">ControllerActivity</string>
    <string name="two">2</string>
    <string name="ul">U+L</string>
    <string name="up">Up</string>
    <string name="ur">U+R</string>
    <string name="jdance_fix">Just Dance Compatibility</string>
    <string name="amt">"[ Acceleration Mode ]  "</string>
    <string name="gyro_dialog">Gyroscope configuration</string>
    <string name="gyro_dialog_content">Please choose an gyroscope/emulation implementation.</string>
    <string name="vgyro_pref_name">net.ezforever.vgyro</string>
    <string name="vgyro_pref_impl_key">vGyroImpl</string>
    <string name="vgyro_impl_selector_title">Choose an implementation</string>
    <string name="vgyro_impl_selector_btn_reset">Reset</string>
</resources>