<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_connection" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right">

        <ImageButton
            android:id="@+id/button_gyroscope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_btn_gyroscope"
            android:scaleType="fitCenter" />
    </LinearLayout>

    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentStart="true">
        <RadioGroup android:id="@+id/group_server" android:focusableInTouchMode="false" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/button_about" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about"/>
            <Button android:id="@+id/button_custom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/custom"/>
            <Button android:id="@+id/button_connect" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/connect"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>